# QoreWidgets

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
examples/: app.py  main.ui  rc_assets.py  ui_main.py
examples/assets/: assets.qrc
gallery/: app.py  main.ui  rc_assets.py  ui_main.py  uic_rcc.ps1
gallery/assets/: assets.qrc
src/QoreWidgets/: __init__.py  rc.py  sideTabWidget.py
src/QoreWidgets/__pyside6__/__framelessWindow__/: framelessWindow.py
src/QoreWidgets/__pyside6__/__immersiveTitleBar__/: immersiveTitleBar.py  immersiveTitleBarContainer.py
src/QoreWidgets/__pyside6__/__loadingOverlay__/: loadingOverlay.py
src/QoreWidgets/__pyside6__/__overlay__/: emptyOverlay.py  loadingOverlay.py
src/QoreWidgets/__pyside6__/__sideTabWidget__/: sideTabWidget.py
src/QoreWidgets/resources/: rc.qrc
