
[project]
name="QoreWidgets"
version="0.2.1"
description = "Yet another collection of those core widgets for a modern qt application."

authors = [
    { name="Dylan", email="du33169@gmail.com" }
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]
[project.optional-dependencies]
pyside6 = [
    "PySide6",
]

[project.urls]
"Homepage" = "https://github.com/du33169/QoreWidgets"
"Bug Tracker" = "https://github.com/du33169/QoreWidgets/issues"

